apps/frameless.io/renderer/global.css
@import "@frameless/design-tokens/dist/index.css";
@import "@utrecht/component-library-css/dist/index.css";
@import "@frameless/components-css/dist/index.css";

@font-face {
  font-display: swap;
  font-family: "Fira Sans";
  font-style: normal;
  font-weight: 400;
  src:
    local("Fira Sans"),
    url("/font/fira-sans-latin-400-normal.woff2") format("woff2");
  unicode-range: U+000-5FF; /*  Downloads only latin glyphs */
}

@font-face {
  font-display: swap;
  font-family: "Fira Sans";
  font-style: normal;
  font-weight: 600;
  src:
    local("Firava"),
    url("/font/fira-sans-latin-600-normal.woff2") format("woff2");
  unicode-range: U+000-5FF; /* Downloads only latin glyphs */
}

@font-face {
  font-display: swap;
  font-family: "Oswald";
  font-style: normal;
  font-weight: 400;
  src: url("/font/oswald-latin-400-normal.woff2") format("woff2");
  unicode-range: U+000-5FF; /* Downloads only latin glyphs */
}

.frameless-theme {
  --utrecht-space-around: 1;
  --frameless-illustration-color: #122529;
  --frameless-illustration-background-color: white;
  --frameless-illustration-floor-color: #a9c7cb;
  --frameless-illustration-background-detail-color: #295960;
  --frameless-illustration-detail-color: #51929a;
  --utrecht-logo-min-block-size: auto;
  --utrecht-logo-min-inline-size: 42px;

  hyphenate-limit-chars: 12 8 4;
  hyphenate-limit-lines: 2;
  hyphens: auto;
  overflow-wrap: break-word;
  word-break: break-word;
}

.utrecht-logo > .frameless-logo-image__svg {
  display: block;
}

.utrecht-paragraph:last-child {
  --utrecht-paragraph-margin-block-end: 0;
}

.utrecht-heading-3:first-child {
  --utrecht-heading-3-margin-block-start: 0;
}

.utrecht-nav-bar {
  margin-block-start: 32px;
}

details[open] summary {
  margin-block-end: 1.5rem;
}

.utrecht-img {
  max-inline-size: 100%;
}

.frameless-illustration {
  max-inline-size: 22rem;
  padding-block-end: 1.5rem;
  padding-block-start: 1.5rem;
}

@media (prefers-color-scheme: dark) {
  .frameless-theme {
    --utrecht-document-background-color: var(--utrecht-document-inverse-background-color);
    --utrecht-document-color: var(--utrecht-document-inverse-color);
    --utrecht-paragraph-color: var(--utrecht-document-inverse-color);
    --utrecht-paragraph-lead-color: var(--utrecht-document-inverse-color);
    --utrecht-heading-1-color: var(--utrecht-document-inverse-color);
    --utrecht-heading-2-color: var(--utrecht-document-inverse-color);
    --utrecht-heading-3-color: var(--utrecht-document-inverse-color);
    --utrecht-heading-4-color: var(--utrecht-document-inverse-color);
    --utrecht-heading-5-color: var(--utrecht-document-inverse-color);
    --utrecht-heading-6-color: var(--utrecht-document-inverse-color);
    --utrecht-link-color: var(--frameless-color-petrol-70);
    --utrecht-link-hover-color: var(--frameless-color-petrol-80);
    --utrecht-link-text-decoration-color: currentColor;
    --frameless-card-background-color: var(--utrecht-document-inverse-background-color);
    --frameless-card-border-color: var(--frameless-color-gray-60);
    --frameless-card-border-width: 1px;
    --frameless-card-box-shadow-color: var(--frameless-color-black);
    --frameless-section-alternate-background-color: var(--frameless-color-petrol-20);
    --frameless-section-alternate-card-background-color: var(--utrecht-document-inverse-background-color);
    --frameless-section-alternate-card-border-width: 1px;
    --frameless-section-alternate-card-border-color: var(--frameless-color-gray-60);
    --utrecht-unordered-list-marker-color: white;
    summary {
      color: var(--utrecht-document-inverse-color);
    }

    .frameless-illustration--backdrop {
      background-color: hsla(0 0% 100%);
      border-radius: 40px;
      padding-block-end: 16px;
      padding-block-start: 16px;
      padding-inline-end: 16px;
      padding-inline-start: 16px;
    }
  }
}

@media screen and (width <= 400px) {
  .frameless-theme {
    --frameless-logo-text-font-size: 2rem;
    --utrecht-heading-2-font-size: 1.5rem;
    --utrecht-heading-3-font-size: 1.4rem;
    --utrecht-heading-4-font-size: 1.3rem;
    --utrecht-heading-5-font-size: 1.2rem;
    --utrecht-heading-6-font-size: 1rem;
    --utrecht-logo-min-inline-size: 32px;
    --frameless-logo-wrapper-gap: 1ch;
  }
}

@media screen and (width <= 350px) {
  .frameless-theme {
    --frameless-logo-wrapper-flex-direction: column;
    --frameless-logo-wrapper-gap: 1ch;
  }

  .frameless-logo__wrapper .utrecht-logo {
    display: none;
  }
}

@media screen and (width <= 300px) {
  .frameless-page-header__container {
    display: flex;
    flex-wrap: wrap-reverse;
    gap: 1rem;
  }
}

